// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugin assignments 1`] = `
"module.exports = function (_scope, {}) {
            let x;
            _scope.x++;
            _scope.x = 1;
            return _scope;
};"
`;

exports[`plugin declarations 1`] = `
"module.exports = function (_scope, {}) {
            let noInitValue;
            for (var forVar = _scope.forVar = 0; _scope.forVar != 0; _scope.forVar++);
            let singleInit = _scope.singleInit = 1;
            let doubleInit1 = _scope.doubleInit1 = 1,
                doubleInit2 = _scope.doubleInit2 = 2;
            var sameDoubleInit = 1,
                sameDoubleInit = _scope.sameDoubleInit = 2;
            return _scope;
};"
`;

exports[`plugin references 1`] = `
"module.exports = function (_scope, {}) {
            let x;
            (0, _scope.x)();
            !function () {
                        _scope.x++;
            };
            () => {
                        return { x: _scope.x };
            };
            return _scope;
};"
`;
